src/components/App.css
/* ... */
.resource .data:not(.legal-props) > :not([data-prop="bdo:note"]) h4 > .ulink > .urilink::before,
.resource .data .propCollapse > div > div > h4:not(.first) > [lang]::before,
.resource .data .propCollapseHeader > h4:not(.first) > [lang]::before,
.resource .data.ext-props .propCollapse > div > div > h4:not(.first) > [lang]::before,
.resource .data:not(.legal-props) .has-collapse h4 .ulink::before { padding:5px 10px; top:-5px; }

*/

.resource .data > :not([data-prop="bdo:volumeHasEtext"]) .propCollapseHeader h4:not(.first)::before,
.resource .data > :not([data-prop="bf:identifiedBy"]):not([data-prop="bdo:volumeHasEtext"]) .propCollapse h4:not(.first)::before
/* .resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .propCollapse > div > div > h4:not(.first)::before  */
{ padding:8px 10px !important; top:-8px !important; }

/*
.resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .propCollapse { padding-left:0; }
.resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .expand { display:none; }
.resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) { align-items: baseline;}
*/

.resource .data > :not([data-prop="bdo:volumeHasEtext"]) .propCollapseHeader h4:not(.first) .hover-menu,
.resource .data > :not([data-prop="bf:identifiedBy"]):not([data-prop="bdo:volumeHasEtext"]) .propCollapse h4:not(.first) .hover-menu,
.resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .propCollapse > div > div > h4:not(.first) .hover-menu { top:-4px; right:-6px; }

.resource .data.ext-props > [data-prop="bf:identifiedBy"] h4:not(.first)::before { padding-right:5px !important; }
.resource .data.ext-props > [data-prop="bf:identifiedBy"] .propCollapse { padding-right:0; /*width:calc(100% + 5px);*/ }
.resource .data.ext-props > [data-prop="bf:identifiedBy"] h4 .hover-menu { right:-3px;  }

.resource .data .group > h4 { max-width:calc(100% - 10px - 20px); padding-right:20px;}

.resource .data.ext-props [data-prop] /*.propCollapse*/ ::before { background-color:white !important;}

.resource .data .propCollapseHeader,
.resource .data .propCollapse.in-true { overflow:visible; position:relative; }



.hover-menu { position:absolute; /*width:50px;*/ right:-7px; top:-1px; display:block; z-index:10; text-align:right; pointer-events: none;opacity:0; height:28px;
line-height:12px; } 
.hover-menu img { height:26px; vertical-align: super;  flex-shrink:0; cursor:pointer; }
.hover-menu div span#nb { position:absolute;color:#d73449;font-weight:900;font-size:10px; right:0; bottom:2px;cursor:pointer;}
.hover-menu span#anchor { display:inline-block; position:relative;}

.hover-menu span#anchor a:hover { border:none;}

.hover-menu.on,
.resource .data [data-prop="bdo:note"] .sub:hover .hover-menu,
:not(#etext-scroll) > h4:hover .hover-menu {  opacity:1 !important; pointer-events: auto !important; }

.resource .data:not(.legal-props) .group:hover > h4:not(.first):not(.multiple) + .hover-menu { opacity:1; }

#popHoverM .resource .data h4[data-prop="bdo:role"] + h4 .hover-menu,
#popHoverM .resource .data h4[data-prop="bdo:creator"] + .subgroup > h4.first,
#popHoverM .resource .data h4[data-prop="bdo:creator"],
#popHoverM .resource .data h4[data-prop="bdo:role"],
.resource .data.data.legal-props > [data-prop="bdo:creator"] .subgroup .subsub:first-child .hover-menu,
.resource .data > [data-prop="bdo:creator"] .subgroup .subsub:first-child .hover-menu { display:none !important; }

#popHoverM + [role=tooltip]:not(#popHoverM) { z-index:9999 !important;}

a.no-bdrc img { position:absolute; margin-top:-2px; opacity:0; } 
h4:hover a.no-bdrc img { opacity:1; }

/* ------------------------------------------------------------------------------------------------------------------------ properties/misc */

.resource .data.access { text-align:center; padding-bottom:80px;}
.resource .data.access h3 { display:"block" ; margin-bottom:15px; max-width:720px; }

.resource .data.top-props .has-collapse:not(.custom):last-child { margin-bottom:-25px; }

.resource .data { text-align:left ; background-color:#ffffff; padding:20px 70px;}
.resource .title + .data { padding-top:35px;padding-bottom:35px; }
.resource > .data:last-child { padding-bottom:50px; }
.resource .data + .data { padding-top:1px; }
.resource .title + .data + .data { padding-bottom:60px; }


.resource .data.images-title { display:flex; /*align-items: end;*/ position:relative; flex-wrap:wrap;}
.resource .data.etext-title { padding-right:270px; display:flex; align-items: flex-start;position:relative;}

.resource .data h2.intro,
.resource .data h2.intro + h2 span,
.resource .title + .data + .data h2.on .T + span { font-size:32px; font-family:'Noto Sans SemCond';font-weight:bold; }

.resource .data h2.intro { padding-right:8px; flex-shrink: 0; line-height:42px;}

.resource .data h2.intro + h2 { line-height:42px;}

.resource .data h2.intro,
.resource .data h2.intro + h2,
.resource .data h2.intro + h2 span { display:inline;vertical-align: baseline; position:relative;}

.resource .data h2.intro + h2 a  { border:none; }
.resource .data h2.intro + h2 a span { border-bottom:1px solid transparent;}
.resource .data h2.intro + h2 a:hover span { border-bottom:1px solid #d73449;}

.resource .data h2.intro + h2 span { max-width:440px;overflow:hidden ;text-overflow: ellipsis;white-space: nowrap; display:inline-block;}


@media(min-width:769px) { 
   .resource .data.images-title h2.intro + h2 span { max-width:680px;}
}

.resource .data.images-title h3 { width:100%;}

.resource .data h2.intro + h2 .lang,
.resource .data h2.intro + h2 .T { display:none; }

/* .resource .data > div:not(.firstImage) { display:flex;align-items:baseline;flex-wrap:nowrap;box-sizing: border-box;width:100%;position:relative;} */
.resource .data > div:not(.firstImage):not(.browse):not(.header) { display:block; position:relative; }
/* ... */

